--- a/refs.bib
+++ b/refs.bib
@@ -26882,38 +26882,50 @@ archivePrefix = "arXiv",
 
 @ARTICLE{kostov19,
    author = {{Kostov}, V.~B. and {Schlieder}, J.~E. and {Barclay}, T. and 
-	{Quintana}, E.~V. and {Colon}, K.~D. and {Brande}, J. and {Collins}, K.~A. and 
-	{Hadden}, S. and {Kane}, S.~R. and {Kreidberg}, L. and {Kruse}, E. and 
-	{Lam}, C. and {Matthews}, E. and {Montet}, B.~T. and {Pozuelos}, F.~J. and 
+	{Quintana}, E.~V. and {Col{\'o}n}, K.~D. and {Brande}, J. and 
+	{Collins}, K.~A. and {Feinstein}, A.~D. and {Hadden}, S. and 
+	{Kane}, S.~R. and {Kreidberg}, L. and {Kruse}, E. and {Lam}, C. and 
+	{Matthews}, E. and {Montet}, B.~T. and {Pozuelos}, F.~J. and 
 	{Stassun}, K.~G. and {Winters}, J.~G. and {Ricker}, G. and {Vanderspek}, R. and 
 	{Latham}, D. and {Seager}, S. and {Winn}, J. and {Jenkins}, J.~M. and 
-	{Afanasev}, D. and {Armstrong}, J.~J.~D. and {Boyd}, P. and 
-	{Barentsen}, G. and {Barkaoui}, K. and {Batalha}, N.~E. and 
-	{Bayliss}, D. and {Burdanov}, A. and {Cacciapuoti}, L. and {Carson}, A. and 
-	{Charbonneau}, D. and {Collins}, K.~I. and {Conti}, D.~M. and 
-	{Covone}, G. and {Clampin}, M. and {Delrez}, L. and {Dressing}, C. and 
-	{Ducrot}, E. and {Essack}, Z. and {Everett}, M.~E. and {Foreman-Mackey}, D. and 
-	{Gan}, T. and {Gilbert}, E. and {Gillon}, M. and {Hamann}, A. and 
-	{Hedges}, C. and {Horch}, E.~P. and {Hocutt}, H. and {Horne}, K. and 
+	{Afanasev}, D. and {Armstrong}, J.~J.~D. and {Arney}, G. and 
+	{Boyd}, P. and {Barentsen}, G. and {Barkaoui}, K. and {Batalha}, N.~E. and 
+	{Beichman}, C. and {Bayliss}, D. and {Burke}, C. and {Burdanov}, A. and 
+	{Cacciapuoti}, L. and {Carson}, A. and {Charbonneau}, D. and 
+	{Christiansen}, J. and {Ciardi}, D. and {Clampin}, M. and {Collins}, K.~I. and 
+	{Conti}, D.~M. and {Coughlin}, J. and {Covone}, G. and {Crossfield}, I. and 
+	{Delrez}, L. and {Domagal-Goldman}, S. and {Dressing}, C. and 
+	{Ducrot}, E. and {Essack}, Z. and {Everett}, M.~E. and {Fauchez}, T. and 
+	{Foreman-Mackey}, D. and {Gan}, T. and {Gilbert}, E. and {Gillon}, M. and 
+	{Gonzales}, E. and {Hamann}, A. and {Hedges}, C. and {Hocutt}, H. and 
+	{Hoffman}, K. and {Horch}, E.~P. and {Horne}, K. and {Howell}, S. and 
 	{Hynes}, S. and {Ireland}, M. and {Irwin}, J.~M. and {Isopi}, G. and 
-	{Jensen}, E.~L.~N. and {Jehin}, E. and {Kielkopf}, J.~F. and 
-	{Lissauer}, J.~J. and {Mann}, A.~W. and {Mallia}, F. and {Matson}, R.~A. and 
-	{Mazeh}, T. and {Moran}, V. and {Morris}, B. and {Muirhead}, P. and 
-	{Mukai}, K. and {Murray}, C. and {Narita}, N. and {Palle}, E. and 
-	{Quinn}, D. and {Relles}, H. and {Rinehart}, S. and {Ritsko}, M. and 
-	{Rodriguez}, J.~E. and {Rowden}, P. and {Sebastian}, D. and 
-	{Sefako}, R. and {Shahaf}, S. and {Shporer}, A. and {Tenenbaum}, P. and 
-	{Ting}, E.~B. and {Twicken}, J.~D. and {van Belle}, G.~T. and 
-	{Vega}, L. and {Volosin}, J. and {Youngblood}, A.},
-    title = "{The L 98-59 System: Three Transiting, Terrestrial-Sized Planets Orbiting a Nearby M-dwarf}",
-  journal = {arXiv e-prints},
+	{Jensen}, E.~L.~N. and {Jehin}, E. and {Kaltenegger}, L. and 
+	{Kielkopf}, J.~F. and {Kopparapu}, R. and {Lewis}, N. and {Lopez}, E. and 
+	{Lissauer}, J.~J. and {Mann}, A.~W. and {Mallia}, F. and {Mandell}, A. and 
+	{Matson}, R.~A. and {Mazeh}, T. and {Monsue}, T. and {Moran}, S.~E. and 
+	{Moran}, V. and {Morley}, C.~V. and {Morris}, B. and {Muirhead}, P. and 
+	{Mukai}, K. and {Mullally}, S. and {Mullally}, F. and {Murray}, C. and 
+	{Narita}, N. and {Palle}, E. and {Pidhorodetska}, D. and {Quinn}, D. and 
+	{Relles}, H. and {Rinehart}, S. and {Ritsko}, M. and {Rodriguez}, J.~E. and 
+	{Rowden}, P. and {Rowe}, J.~F. and {Sebastian}, D. and {Sefako}, R. and 
+	{Shahaf}, S. and {Shporer}, A. and {Ta{\~n}{\'o}n Reyes}, N. and 
+	{Tenenbaum}, P. and {Ting}, E.~B. and {Twicken}, J.~D. and {van Belle}, G.~T. and 
+	{Vega}, L. and {Volosin}, J. and {Walkowicz}, L.~M. and {Youngblood}, A.
+	},
+    title = "{The L 98-59 System: Three Transiting, Terrestrial-size Planets Orbiting a Nearby M Dwarf}",
+  journal = {\aj},
 archivePrefix = "arXiv",
    eprint = {1903.08017},
  primaryClass = "astro-ph.EP",
- keywords = {Astrophysics - Earth and Planetary Astrophysics},
+ keywords = {planets and satellites: detection, stars: individual: TIC 307210830, TOI-175, techniques: photometric },
      year = 2019,
-    month = mar,
-   adsurl = {http://adsabs.harvard.edu/abs/2019arXiv190308017K},
+    month = jul,
+   volume = 158,
+      eid = {32},
+    pages = {32},
+      doi = {10.3847/1538-3881/ab2459},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2019AJ....158...32K},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -27870,5 +27882,291 @@ archivePrefix = {arXiv},
        eprint = {1901.06364},
  primaryClass = {astro-ph.SR},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2019AJ....157..216W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{harpsoe13,
+       author = {{Harps{\o}e}, K.~B.~W. and {Hardis}, S. and {Hinse}, T.~C. and
+         {J{\o}rgensen}, U.~G. and {Mancini}, L. and {Southworth}, J. and
+         {Alsubai}, K.~A. and {Bozza}, V. and {Browne}, P. and
+         {Burgdorf}, M.~J. and {Calchi Novati}, S. and {Dodds}, P. and
+         {Dominik}, M. and {Fang}, X. -S. and {Finet}, F. and {Gerner}, T. and
+         {Gu}, S. -H. and {Hundertmark}, M. and {Jessen-Hansen}, J. and
+         {Kains}, N. and {Kerins}, E. and {Kjeldsen}, H. and {Liebig}, C. and
+         {Lund}, M.~N. and {Lundkvist}, M. and {Mathiasen}, M. and
+         {Nesvorn{\'y}}, D. and {Nikolov}, N. and {Penny}, M.~T. and
+         {Proft}, S. and {Rahvar}, S. and {Ricci}, D. and {Sahu}, K.~C. and
+         {Scarpetta}, G. and {Sch{\"a}fer}, S. and {Sch{\"o}nebeck}, F. and
+         {Snodgrass}, C. and {Skottfelt}, J. and {Surdej}, J. and
+         {Tregloan-Reed}, J. and {Wertz}, O.},
+        title = "{The transiting system GJ1214: high-precision defocused transit observations and a search for evidence of transit timing variation}",
+      journal = {\aap},
+     keywords = {planetary systems, stars: individual: GJ1214, methods: statistical, methods: observational, techniques: photometric, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2013",
+        month = "Jan",
+       volume = {549},
+          eid = {A10},
+        pages = {A10},
+          doi = {10.1051/0004-6361/201219996},
+archivePrefix = {arXiv},
+       eprint = {1207.3064},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&A...549A..10H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{dragomir19,
+       author = {{Dragomir}, Diana and {Teske}, Johanna and {G{\"u}nther}, Maximilian N. and
+         {S{\'e}gransan}, Damien and {Burt}, Jennifer A. and
+         {Huang}, Chelsea X. and {Vanderburg}, Andrew and {Matthews}, Elisabeth and
+         {Dumusque}, Xavier and {Stassun}, Keivan G. and {Pepper}, Joshua and
+         {Ricker}, George R. and {Vanderspek}, Roland and {Latham}, David W. and
+         {Seager}, Sara and {Winn}, Joshua N. and {Jenkins}, Jon M. and
+         {Beatty}, Thomas and {Bouchy}, Fran{\c{c}}ois and {Brown}, Timothy M. and
+         {Butler}, R. Paul and {Ciardi}, David R. and {Crane}, Jeffrey D. and
+         {Eastman}, Jason D. and {Fossati}, Luca and {Francis}, Jim and
+         {Fulton}, Benjamin J. and {Gaudi}, B. Scott and {Goeke}, Robert F. and
+         {James}, David and {Klaus}, Todd C. and {Kuhn}, Rudolf B. and
+         {Lovis}, Christophe and {Lund}, Michael B. and {McDermott}, Scott and
+         {Paegert}, Martin and {Pepe}, Francesco and {Rodriguez}, Joseph E. and
+         {Sha}, Lizhou and {Shectman}, Stephen A. and {Shporer}, Avi and
+         {Siverd}, Robert J. and {Garcia Soto}, Aylin and {Stevens}, Daniel J. and
+         {Twicken}, Joseph D. and {Udry}, St{\'e}phane and
+         {Villanueva}, Steven, Jr. and {Wang}, Sharon X. and {Wohler}, Bill and
+         {Yao}, Xinyu and {Zhan}, Zhuchang},
+        title = "{TESS Delivers Its First Earth-sized Planet and a Warm Sub-Neptune}",
+      journal = {\apjl},
+     keywords = {planetary systems, planets and satellites: detection, stars: individual: HD 21749, TIC 279741379, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Apr",
+       volume = {875},
+       number = {2},
+          eid = {L7},
+        pages = {L7},
+          doi = {10.3847/2041-8213/ab12ed},
+archivePrefix = {arXiv},
+       eprint = {1901.00051},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...875L...7D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{luque19,
+       author = {{Luque}, R. and {Pall{\'e}}, E. and {Kossakowski}, D. and
+         {Dreizler}, S. and {Kemmer}, J. and {Espinoza}, N. and {Burt}, J. and
+         {Anglada-Escud{\'e}}, G. and {B{\'e}jar}, V.~J.~S. and
+         {Caballero}, J.~A. and {Collins}, K.~A. and {Collins}, K.~I. and
+         {Cort{\'e}s-Contreras}, M. and {D{\'\i}ez-Alonso}, E. and {Feng}, F. and
+         {Hatzes}, A. and {Hellier}, C. and {Henning}, T. and {Jeffers}, S.~V. and
+         {Kaltenegger}, L. and {K{\"u}rster}, M. and {Madden}, J. and
+         {Molaverdikhani}, K. and {Montes}, D. and {Narita}, N. and {Nowak}, G. and
+         {Ofir}, A. and {Oshagh}, M. and {Parviainen}, H. and {Quirrenbach}, A. and
+         {Reffert}, S. and {Reiners}, A. and {Rodr{\'\i}guez-L{\'o}pez}, C. and
+         {Schlecker}, M. and {Stock}, S. and {Trifonov}, T. and {Winn}, J.~N. and
+         {Zapatero Osorio}, M.~R. and {Zechmeister}, M. and {Amado}, P.~J. and
+         {Anderson}, D.~R. and {Batalha}, N.~E. and {Bauer}, F.~F. and
+         {Bluhm}, P. and {Burke}, C.~J. and {Butler}, R.~P. and
+         {Caldwell}, D.~A. and {Chen}, G. and {Crane}, J.~D. and {Dragomir}, D. and
+         {Dressing}, C.~D. and {Dynes}, S. and {Jenkins}, J.~M. and
+         {Kaminski}, A. and {Klahr}, H. and {Kotani}, T. and {Lafarga}, M. and
+         {Latham}, D.~W. and {Lewin}, P. and {McDermott}, S. and
+         {Monta{\~n}{\'e}s-Rodr{\'\i}guez}, P. and {Morales}, J.~C. and
+         {Murgas}, F. and {Nagel}, E. and {Pedraz}, S. and {Ribas}, I. and
+         {Ricker}, G.~R. and {Rowden}, P. and {Seager}, S. and
+         {Shectman}, S.~A. and {Tamura}, M. and {Teske}, J. and
+         {Twicken}, J.~D. and {Vanderspeck}, R. and {Wang}, S.~X. and
+         {Wohler}, B.},
+        title = "{Planetary system around the nearby M dwarf GJ 357 including a transiting, hot, Earth-sized planet optimal for atmospheric characterization}",
+      journal = {\aap},
+     keywords = {planetary systems, techniques: photometric, techniques: radial velocities, stars: individual: Gl 357, stars: late-type, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2019",
+        month = "Aug",
+       volume = {628},
+          eid = {A39},
+        pages = {A39},
+          doi = {10.1051/0004-6361/201935801},
+archivePrefix = {arXiv},
+       eprint = {1904.12818},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...628A..39L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{rice19,
+       author = {{Rice}, K. and {Malavolta}, L. and {Mayo}, A. and {Mortier}, A. and
+         {Buchhave}, L.~A. and {Affer}, L. and {Vanderburg}, A. and
+         {Lopez-Morales}, M. and {Poretti}, E. and {Zeng}, L. and
+         {Collier Cameron}, A. and {Damasso}, M. and {Coffinet}, A. and
+         {Latham}, D.~W. and {Bonomo}, A.~S. and {Bouchy}, F. and
+         {Charbonneau}, D. and {Dumusque}, X. and {Figueira}, P. and
+         {Martinez Fiorenzano}, A.~F. and {Haywood}, R.~D. and
+         {Johnson}, J. Asher and {Lopez}, E. and {Lovis}, C. and {Mayor}, M. and
+         {Micela}, G. and {Molinari}, E. and {Nascimbeni}, V. and {Nava}, C. and
+         {Pepe}, F. and {Phillips}, D.~F. and {Piotto}, G. and {Sasselov}, D. and
+         {S{\'e}gransan}, D. and {Sozzetti}, A. and {Udry}, S. and {Watson}, C.},
+        title = "{Masses and radii for the three super-Earths orbiting GJ 9827, and implications for the composition of small exoplanets}",
+      journal = {\mnras},
+     keywords = {techniques: radial velocities, planets and satellites: composition, planets and satellites: detection, planets and satellites: fundamental parameters, planets and satellites: general, Stars: individual: GJ 9827 (2MASS J23270480-0117108, EPIC 246389858, HIP 115752), Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Apr",
+       volume = {484},
+       number = {3},
+        pages = {3731-3745},
+          doi = {10.1093/mnras/stz130},
+archivePrefix = {arXiv},
+       eprint = {1812.07302},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.484.3731R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{gillon17b,
+       author = {{Gillon}, Micha{\"e}l and {Demory}, Brice-Olivier and
+         {Van Grootel}, Val{\'e}rie and {Motalebi}, Fatemeh and
+         {Lovis}, Christophe and {Cameron}, Andrew Collier and
+         {Charbonneau}, David and {Latham}, David and {Molinari}, Emilio and
+         {Pepe}, Francesco A. and {S{\'e}gransan}, Damien and
+         {Sasselov}, Dimitar and {Udry}, St{\'e}phane and {Mayor}, Michel and
+         {Micela}, Giuseppina and {Piotto}, Giampaolo and {Sozzetti}, Alessandro},
+        title = "{Two massive rocky planets transiting a K-dwarf 6.5{\,}parsecs away}",
+      journal = {Nature Astronomy},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = "2017",
+        month = "Mar",
+       volume = {1},
+          eid = {0056},
+        pages = {0056},
+          doi = {10.1038/s41550-017-0056},
+archivePrefix = {arXiv},
+       eprint = {1703.01430},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017NatAs...1E..56G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{persson18,
+       author = {{Persson}, C.~M. and {Fridlund}, M. and {Barrag{\'a}n}, O. and
+         {Dai}, F. and {Gandolfi}, D. and {Hatzes}, A.~P. and {Hirano}, T. and
+         {Grziwa}, S. and {Korth}, J. and {Prieto-Arranz}, J. and {Fossati}, L. and
+         {Van Eylen}, V. and {Justesen}, A.~B. and {Livingston}, J. and
+         {Kubyshkina}, D. and {Deeg}, H.~J. and {Guenther}, E.~W. and
+         {Nowak}, G. and {Cabrera}, J. and {Eigm{\"u}ller}, Ph. and
+         {Csizmadia}, Sz. and {Smith}, A.~M.~S. and {Erikson}, A. and
+         {Albrecht}, S. and {Sobrino}, Alonso and {Cochran}, W.~D. and
+         {Endl}, M. and {Esposito}, M. and {Fukui}, A. and {Heeren}, P. and
+         {Hidalgo}, D. and {Hjorth}, M. and {Kuzuhara}, M. and {Narita}, N. and
+         {Nespral}, D. and {Palle}, E. and {P{\"a}tzold}, M. and {Rauer}, H. and
+         {Rodler}, F. and {Winn}, J.~N.},
+        title = "{Super-Earth of 8 M$_{{\ensuremath{\oplus}}}$ in a 2.2-day orbit around the K5V star K2-216}",
+      journal = {\aap},
+     keywords = {planetary systems, stars: individual: K2-216, techniques: photometric, techniques: radial velocities, planets and satellites: atmospheres, planets and satellites: composition, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2018",
+        month = "Oct",
+       volume = {618},
+          eid = {A33},
+        pages = {A33},
+          doi = {10.1051/0004-6361/201832867},
+archivePrefix = {arXiv},
+       eprint = {1805.04774},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018A&A...618A..33P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{macdonald16,
+       author = {{MacDonald}, Mariah G. and {Ragozzine}, Darin and {Fabrycky}, Daniel C. and
+         {Ford}, Eric B. and {Holman}, Matthew J. and {Isaacson}, Howard T. and
+         {Lissauer}, Jack J. and {Lopez}, Eric D. and {Mazeh}, Tsevi and
+         {Rogers}, Leslie and {Rowe}, Jason F. and {Steffen}, Jason H. and
+         {Torres}, Guillermo},
+        title = "{A Dynamical Analysis of the Kepler-80 System of Five Transiting Planets}",
+      journal = {\aj},
+     keywords = {methods: statistical, planetary systems, planets and satellites: dynamical evolution and stability, stars: individual: Kepler-80, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2016",
+        month = "Oct",
+       volume = {152},
+       number = {4},
+          eid = {105},
+        pages = {105},
+          doi = {10.3847/0004-6256/152/4/105},
+archivePrefix = {arXiv},
+       eprint = {1607.07540},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016AJ....152..105M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{hamann19,
+       author = {{Hamann}, Aaron and {Montet}, Benjamin T. and {Fabrycky}, Daniel C. and
+         {Agol}, Eric and {Kruse}, Ethan},
+        title = "{K2-146: Discovery of Planet c, Precise Masses from Transit Timing, and Observed Precession}",
+      journal = {\aj},
+     keywords = {planets and satellites: detection, planets and satellites: dynamical evolution and stability, planets and satellites: individual: EPIC 211924657, K2-146, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2019",
+        month = "Sep",
+       volume = {158},
+       number = {3},
+          eid = {133},
+        pages = {133},
+          doi = {10.3847/1538-3881/ab32e3},
+archivePrefix = {arXiv},
+       eprint = {1907.10620},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AJ....158..133H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{zeng16,
+       author = {{Zeng}, Li and {Sasselov}, Dimitar D. and {Jacobsen}, Stein B.},
+        title = "{Mass-Radius Relation for Rocky Planets Based on PREM}",
+      journal = {\apj},
+     keywords = {planets and satellites: composition, planets and satellites: general, planets and satellites: interiors, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2016",
+        month = "Mar",
+       volume = {819},
+       number = {2},
+          eid = {127},
+        pages = {127},
+          doi = {10.3847/0004-637X/819/2/127},
+archivePrefix = {arXiv},
+       eprint = {1512.08827},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...819..127Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{chiang13,
+       author = {{Chiang}, Eugene and {Laughlin}, Gregory},
+        title = "{The minimum-mass extrasolar nebula: in situ formation of close-in super-Earths}",
+      journal = {\mnras},
+     keywords = {planets and satellites: atmospheres, planets and satellites: composition, planets and satellites: formation, planets and satellites: general, protoplanetary discs, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2013",
+        month = "Jun",
+       volume = {431},
+       number = {4},
+        pages = {3444-3455},
+          doi = {10.1093/mnras/stt424},
+archivePrefix = {arXiv},
+       eprint = {1211.1673},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013MNRAS.431.3444C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{owen19,
+       author = {{Owen}, James E. and {Adams}, Fred C.},
+        title = "{Effects of magnetic fields on the location of the evaporation valley for low-mass exoplanets}",
+      journal = {\mnras},
+     keywords = {planets and satellites: composition, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Nov",
+       volume = {490},
+       number = {1},
+        pages = {15-20},
+          doi = {10.1093/mnras/stz2601},
+archivePrefix = {arXiv},
+       eprint = {1909.05866},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.490...15O},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
